# sapp-beamer

./: .bazelrc  .clang-format  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE  WORKSPACE.bazel  WORKSPACE.bzlmod  main.cc
beamer/: BUILD  fitter.cc  fitter.h  main.cc  repo.cc  repo.h
beamer/domain/: data-holder.h  fitter.h
beamer/model/: BUILD  frame.h  model.h
beamer/proto/: BUILD  beamer-cfg.proto  beamer-out.proto  beamer-res.proto
beamer/repo/: BUILD  configuration-repo.cc  configuration-repo.h  data-repo.cc  data-repo.h  switch.cc  switch.h
datasource/: BUILD.bazel  configuration.cc  configuration.h  message-client.cc  message-client.h  record.h
domain/: BUILD.bazel  beamer.cc  beamer.h
domain/core/: BUILD  core.cc  core.h
gsl/: BUILD.bazel
proto/: BUILD  BUILD.bazel  beamer-cfg.proto  beamer-out.proto
