bazel_dep(name = "glog", version = "0.6.0", repo_name = "glog")
bazel_dep(name = "googletest", version = "1.14.0", repo_name = "gtest")
bazel_dep(name = "paho_mqtt_cpp", version = "1.3.2", repo_name = "mqtt")
bazel_dep(name = "protobuf", version = "21.7", repo_name = "protobuf")
bazel_dep(name = "rules_proto", version = "6.0.0-rc1", repo_name = "rules_proto")