"Bunch dimensions processor"

module(
    name = "beamer",
    version = "1.0.0",
)

bazel_dep(name = "protobuf", version = "21.7", repo_name = "protobuf")
bazel_dep(name = "rules_proto", version = "6.0.0-rc1", repo_name = "rules_proto")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True, repo_name = "sync")
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "b998dcacf448fabea98b7870031cc0be80976440",
)
